force-app/main/default/objects/ABHFL_Case_Detail__c/fields/Dispatch_Location__c.field-meta.xml
<CustomField>
    <fullName>Dispatch_Location__c</fullName>
    <label>Dispatch Location</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Bangalore</fullName>
            </value>
            <value>
                <fullName>Chennai</fullName>
            </value>
            <value>
                <fullName>Delhi parliament street</fullName>
            </value>
            <value>
                <fullName>Hyderabad</fullName>
            </value>
            <value>
                <fullName>Kolkata</fullName>
            </value>
            <value>
                <fullName>Mumbai-Vashi</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>