force-app/main/default/objects/ABHFL_Case_Detail__c/fields/Disputed_Amount__c.field-meta.xml
<CustomField>
    <fullName>Disputed_Amount__c</fullName>
    <label>Disputed Amount</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>