force-app/main/default/objects/ABHFL_Case_Detail__c/fields/Doc_Received_Date__c.field-meta.xml
<CustomField>
    <fullName>Doc_Received_Date__c</fullName>
    <label>Doc Received Date</label>
    <type>Date</type>
</CustomField>