force-app/main/default/objects/ABHFL_Case_Detail__c/fields/Document_Category__c.field-meta.xml
<CustomField>
    <fullName>Document_Category__c</fullName>
    <label>Document Category</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Vital</fullName>
            </value>
            <value>
                <fullName>Non-Vital</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>