force-app/main/default/objects/ABHFL_Case_Detail__c/fields/Document_Refiled__c.field-meta.xml
<CustomField>
    <fullName>Document_Refiled__c</fullName>
    <label>Document Refiled?</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>