force-app/main/default/objects/ABHFL_Case_Detail__c/fields/Document_Verification_Remarks__c.field-meta.xml
<CustomField>
    <fullName>Document_Verification_Remarks__c</fullName>
    <label>Document Verification Remarks</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>