force-app/main/default/objects/ABHFL_Case_Detail__c/fields/Ebot_Owner_Full_Name__c.field-meta.xml
<CustomField>
    <fullName>Ebot_Owner_Full_Name__c</fullName>
    <description>Used for HFL Inbound API</description>
    <label>Ebot Owner Full Name</label>
    <length>50</length>
    <type>Text</type>
</CustomField>