force-app/main/default/objects/ABHFL_Case_Detail__c/fields/EMI_Tenure__c.field-meta.xml
<CustomField>
    <fullName>EMI_Tenure__c</fullName>
    <label>EMI Tenure</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>