force-app/main/default/objects/ABHFL_Case_Detail__c/fields/Escrow_Account_Number__c.field-meta.xml
<CustomField>
    <fullName>Escrow_Account_Number__c</fullName>
    <label>Escrow Account Number</label>
    <length>50</length>
    <type>Text</type>
</CustomField>