force-app/main/default/objects/ABHFL_Case_Detail__c/fields/FI_Report_O__c.field-meta.xml
<CustomField>
    <fullName>FI_Report_O__c</fullName>
    <label>FI Report (O)</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>