force-app/main/default/objects/ABHFL_Case_Detail__c/fields/FI_Report_R__c.field-meta.xml
<CustomField>
    <fullName>FI_Report_R__c</fullName>
    <label>FI Report (R)</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>