force-app/main/default/objects/ABHFL_Case_Detail__c/fields/File_Bar_Code__c.field-meta.xml
<CustomField>
    <fullName>File_Bar_Code__c</fullName>
    <label>File Bar Code</label>
    <length>255</length>
    <type>Text</type>
</CustomField>