force-app/main/default/objects/ABHFL_Case_Detail__c/fields/File_Upload__c.field-meta.xml
<CustomField>
    <fullName>File_Upload__c</fullName>
    <formula>HYPERLINK(&quot;/lightning/cmp/c__abhfl_fileUploadHyperlink?c__recordId=&quot;+Id, IMAGE(&quot;/resource/UploadIcon&quot;, &quot;Upload File&quot;), &quot;_self&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>File Upload</label>
    <type>Text</type>
</CustomField>