force-app/main/default/objects/ABHFL_Case_Detail__c/fields/Final_resolution__c.field-meta.xml
<CustomField>
    <fullName>Final_resolution__c</fullName>
    <label>Final resolution</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Fully Resolved</fullName>
            </value>
            <value>
                <fullName>Partially Resolved</fullName>
            </value>
            <value>
                <fullName>Declined</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>