force-app/main/default/objects/ABHFL_Case_Detail__c/fields/Financial_Year_TDS_Refund__c.field-meta.xml
<CustomField>
    <fullName>Financial_Year_TDS_Refund__c</fullName>
    <label>Financial Year</label>
    <length>50</length>
    <type>Text</type>
</CustomField>