force-app/main/default/objects/ABHFL_Case_Detail__c/fields/Foreclosure_Amount__c.field-meta.xml
<CustomField>
    <fullName>Foreclosure_Amount__c</fullName>
    <label>Foreclosure Amount</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>