force-app/main/default/objects/ABHFL_Case_Detail__c/fields/From_Year__c.field-meta.xml
<CustomField>
    <fullName>From_Year__c</fullName>
    <description>Used for HFL Inbound API</description>
    <label>From Year</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>2025</fullName>
            </value>
            <value>
                <fullName>2024</fullName>
            </value>
            <value>
                <fullName>2023</fullName>
            </value>
            <value>
                <fullName>2022</fullName>
            </value>
            <value>
                <fullName>2021</fullName>
            </value>
            <value>
                <fullName>2020</fullName>
            </value>
            <value>
                <fullName>2019</fullName>
            </value>
            <value>
                <fullName>2018</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>