force-app/main/default/objects/ABHFL_Case_Detail__c/fields/Gap_IT__c.field-meta.xml
<CustomField>
    <fullName>Gap_IT__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Gap - IT</label>
    <type>Checkbox</type>
</CustomField>