force-app/main/default/objects/ABHFL_Case_Detail__c/fields/Gap_Product__c.field-meta.xml
<CustomField>
    <fullName>Gap_Product__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Gap - Product</label>
    <type>Checkbox</type>
</CustomField>