force-app/main/default/objects/ABHFL_Case_Detail__c/fields/Google_Search__c.field-meta.xml
<CustomField>
    <fullName>Google_Search__c</fullName>
    <label>Google Search</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>