force-app/main/default/objects/ABHFL_Case_Detail__c/fields/Grievance_Details_Sent__c.field-meta.xml
<CustomField>
    <fullName>Grievance_Details_Sent__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Grievance Details Sent</label>
    <type>Checkbox</type>
</CustomField>