force-app/main/default/objects/ABHFL_Case_Detail__c/fields/Hub_Location_Zone_Wise__c.field-meta.xml
<CustomField>
    <fullName>Hub_Location_Zone_Wise__c</fullName>
    <label>Hub Location (Zone Wise)</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Delhi</fullName>
            </value>
            <value>
                <fullName>Kolkata</fullName>
            </value>
            <value>
                <fullName>Mumbai</fullName>
            </value>
            <value>
                <fullName>Gujarat</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>