force-app/main/default/objects/ABHFL_Case_Detail__c/fields/Information_Provided__c.field-meta.xml
<CustomField>
    <fullName>Information_Provided__c</fullName>
    <label>Information Provided</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Process</fullName>
            </value>
            <value>
                <fullName>Open Case Status</fullName>
            </value>
            <value>
                <fullName>Process &amp; Open Case Status</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>