force-app/main/default/objects/ABHFL_Case_Detail__c/fields/Insurance_Partner_1__c.field-meta.xml
<CustomField>
    <fullName>Insurance_Partner_1__c</fullName>
    <label>Insurance Partner 1</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>BSLI</fullName>
            </value>
            <value>
                <fullName>ABHI</fullName>
            </value>
            <value>
                <fullName>Liberty</fullName>
            </value>
            <value>
                <fullName>Reliance</fullName>
            </value>
            <value>
                <fullName>Go digit</fullName>
            </value>
            <value>
                <fullName>ICICI</fullName>
            </value>
            <value>
                <fullName>Bajaj Allianz</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>