force-app/main/default/objects/ABHFL_Case_Detail__c/fields/Insurance_Policy_Number_3__c.field-meta.xml
<CustomField>
    <fullName>Insurance_Policy_Number_3__c</fullName>
    <label>Insurance Policy Number 3</label>
    <length>255</length>
    <type>Text</type>
</CustomField>