force-app/main/default/objects/ABHFL_Case_Detail__c/fields/Insurance_Status2__c.field-meta.xml
<CustomField>
    <fullName>Insurance_Status2__c</fullName>
    <label>Insurance Status 2</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Refunded</fullName>
            </value>
            <value>
                <fullName>Under process</fullName>
            </value>
            <value>
                <fullName>Expired</fullName>
            </value>
            <value>
                <fullName>Lock-in</fullName>
            </value>
            <value>
                <fullName>Discrepancy</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>