force-app/main/default/objects/ABHFL_Case_Detail__c/fields/Insured_Name4__c.field-meta.xml
<CustomField>
    <fullName>Insured_Name4__c</fullName>
    <label>Insured Name 4</label>
    <length>255</length>
    <type>Text</type>
</CustomField>