force-app/main/default/objects/ABHFL_Case_Detail__c/fields/Intimation_Date2__c.field-meta.xml
<CustomField>
    <fullName>Intimation_Date2__c</fullName>
    <label>Intimation Date 2</label>
    <type>Date</type>
</CustomField>