force-app/main/default/objects/ABHFL_Case_Detail__c/fields/Intimation_Date3__c.field-meta.xml
<CustomField>
    <fullName>Intimation_Date3__c</fullName>
    <label>Intimation Date 3</label>
    <type>Date</type>
</CustomField>