force-app/main/default/objects/ABHFL_Case_Detail__c/fields/Intimation_Date4__c.field-meta.xml
<CustomField>
    <fullName>Intimation_Date4__c</fullName>
    <label>Intimation Date 4</label>
    <type>Date</type>
</CustomField>