force-app/main/default/objects/ABHFL_Case_Detail__c/fields/Is_FTR__c.field-meta.xml
<CustomField>
    <fullName>Is_FTR__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is FTR?</label>
    <type>Checkbox</type>
</CustomField>