force-app/main/default/objects/ABHFL_Case_Detail__c/fields/Is_Recategorised_from_complaint__c.field-meta.xml
<CustomField>
    <fullName>Is_Recategorised_from_complaint__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Recategorised from complaint</label>
    <type>Checkbox</type>
</CustomField>