force-app/main/default/objects/ABHFL_Case_Detail__c/fields/Is_Regulator__c.field-meta.xml
<CustomField>
    <fullName>Is_Regulator__c</fullName>
    <label>Is Regulator</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>No</fullName>
            </value>
            <value>
                <fullName>Yes</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>