force-app/main/default/objects/ABHFL_Case_Detail__c/fields/IsRekyc__c.field-meta.xml
<CustomField>
    <fullName>IsRekyc__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Used for HFL Inbound API</description>
    <label>IsRekyc</label>
    <type>Checkbox</type>
</CustomField>