force-app/main/default/objects/ABHFL_Case_Detail__c/fields/KYC_Complied__c.field-meta.xml
<CustomField>
    <fullName>KYC_Complied__c</fullName>
    <label>KYC Complied</label>
    <length>50</length>
    <type>Text</type>
</CustomField>