force-app/main/default/objects/ABHFL_Case_Detail__c/fields/Lan_Comment__c.field-meta.xml
<CustomField>
    <fullName>Lan_Comment__c</fullName>
    <label>Lan Comment</label>
    <length>255</length>
    <type>Text</type>
</CustomField>