force-app/main/default/objects/ABHFL_Case_Detail__c/fields/Lapses__c.field-meta.xml
<CustomField>
    <fullName>Lapses__c</fullName>
    <label>Lapses</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>