force-app/main/default/objects/ABHFL_Case_Detail__c/fields/Last_Rekyc_Date__c.field-meta.xml
<CustomField>
    <fullName>Last_Rekyc_Date__c</fullName>
    <description>Used for HFL Inbound API</description>
    <label>Last Rekyc Date</label>
    <type>Date</type>
</CustomField>