force-app/main/default/objects/ABHFL_Case_Detail__c/fields/Last_Retention_Approval__c.field-meta.xml
<CustomField>
    <fullName>Last_Retention_Approval__c</fullName>
    <label>Last Retention Approval</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>less than 3 months</fullName>
            </value>
            <value>
                <fullName>more than 3 months</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>