force-app/main/default/objects/ABHFL_Case_Detail__c/fields/Legal_report_at_onboarding__c.field-meta.xml
<CustomField>
    <fullName>Legal_report_at_onboarding__c</fullName>
    <label>Legal report at onboarding</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>