force-app/main/default/objects/ABHFL_Case_Detail__c/fields/Masked_Mobile__c.field-meta.xml
<CustomField>
    <fullName>Masked_Mobile__c</fullName>
    <description>Adding this field to add into Email template</description>
    <formula>IF(
LEN(  New_Mobile_Number__c  ) &gt;= 4,
&quot;******&quot; &amp;
RIGHT( New_Mobile_Number__c , 4),
 New_Mobile_Number__c 
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Masked MobileNumber</label>
    <type>Text</type>
</CustomField>