force-app/main/default/objects/ABHFL_Case_Detail__c/fields/Masked_Partial_LANs__c.field-meta.xml
<CustomField>
    <fullName>Masked_Partial_LANs__c</fullName>
    <label>Masked Partial LANs</label>
    <length>255</length>
    <type>Text</type>
</CustomField>