force-app/main/default/objects/ABHFL_Case_Detail__c/fields/MH_Number__c.field-meta.xml
<CustomField>
    <fullName>MH_Number__c</fullName>
    <label>MH Number</label>
    <length>100</length>
    <type>Text</type>
</CustomField>