force-app/main/default/objects/ABHFL_Case_Detail__c/fields/Mode_of_Change_of_Address__c.field-meta.xml
<CustomField>
    <fullName>Mode_of_Change_of_Address__c</fullName>
    <label>Mode of Change of Address</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>VKYC</fullName>
            </value>
            <value>
                <fullName>FI</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>