force-app/main/default/objects/ABHFL_Case_Detail__c/fields/Name_or_type_of_policy__c.field-meta.xml
<CustomField>
    <fullName>Name_or_type_of_policy__c</fullName>
    <label>​​Name or type of policy</label>
    <length>255</length>
    <type>Text</type>
</CustomField>