force-app/main/default/objects/ABHFL_Case_Detail__c/fields/New_Email_ID__c.field-meta.xml
<CustomField>
    <fullName>New_Email_ID__c</fullName>
    <label>New Email ID</label>
    <type>Email</type>
</CustomField>