force-app/main/default/objects/ABHFL_Case_Detail__c/fields/New_Mobile_Number__c.field-meta.xml
<CustomField>
    <fullName>New_Mobile_Number__c</fullName>
    <label>New Mobile Number</label>
    <type>Phone</type>
</CustomField>