force-app/main/default/objects/ABHFL_Case_Detail__c/fields/OCR_Remark__c.field-meta.xml
<CustomField>
    <fullName>OCR_Remark__c</fullName>
    <label>OCR Remark</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>