force-app/main/default/objects/ABHFL_Case_Detail__c/fields/OneABC_Case_Id__c.field-meta.xml
<CustomField>
    <fullName>OneABC_Case_Id__c</fullName>
    <description>Used for HFL Inbound API</description>
    <label>OneABC Case Id</label>
    <length>50</length>
    <type>Text</type>
</CustomField>