force-app/main/default/objects/ABHFL_Case_Detail__c/fields/OneABC_Owner__c.field-meta.xml
<CustomField>
    <fullName>OneABC_Owner__c</fullName>
    <description>Used for HFL Inbound API</description>
    <label>OneABC Owner</label>
    <length>50</length>
    <type>Text</type>
</CustomField>