force-app/main/default/objects/ABHFL_Case_Detail__c/fields/Part_Payment_Amount__c.field-meta.xml
<CustomField>
    <fullName>Part_Payment_Amount__c</fullName>
    <description>Used for HFL Inbound API</description>
    <label>Part Payment Amount</label>
    <precision>17</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>