force-app/main/default/objects/ABHFL_Case_Detail__c/fields/Payable_Charges__c.field-meta.xml
<CustomField>
    <fullName>Payable_Charges__c</fullName>
    <description>Used for HFL Inbound API</description>
    <label>Payable Charges</label>
    <precision>17</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>