force-app/main/default/objects/ABHFL_Case_Detail__c/fields/Payment_Link_Trigger_Time__c.field-meta.xml
<CustomField>
    <fullName>Payment_Link_Trigger_Time__c</fullName>
    <label>Payment Link Trigger Time</label>
    <type>DateTime</type>
</CustomField>