force-app/main/default/objects/ABHFL_Case_Detail__c/fields/Payment_Received__c.field-meta.xml
<CustomField>
    <fullName>Payment_Received__c</fullName>
    <label>Payment Received?</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>Waived</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>