force-app/main/default/objects/ABHFL_Case_Detail__c/fields/Paytm_Link__c.field-meta.xml
<CustomField>
    <fullName>Paytm_Link__c</fullName>
    <label>Paytm Link</label>
    <type>TextArea</type>
</CustomField>