force-app/main/default/objects/ABHFL_Case_Detail__c/fields/POD__c.field-meta.xml
<CustomField>
    <fullName>POD__c</fullName>
    <label>POD #</label>
    <length>255</length>
    <type>Text</type>
</CustomField>